Fixes z-index of dropdown menus.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -18,6 +18,10 @@ body {
     margin-top: 0;
   }
 
+  ul.dropdown-menu {
+    z-index: 9999;
+  }
+
   min-height: 100%;
   height: auto !important;
   height: 100%;
